--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <header>
       <span class="badge">LOGISTICS TOOL</span>
       <h1>터미널 정보</h1>
-      <div class="sub">지역/코드/터미널명으로 빠르게 조회하세요. (라이트 · 모바일 최적화)</div>
+      <div class="sub">지역/코드/터미널명으로 빠르게 조회하세요.</div>
     </header>
 
     <section class="toolbar" role="region" aria-label="필터 & 검색">
